Fix contextMenu extra space in menu top

--- a/ui/package-explorer.reel/contextual-menu.reel/contextual-menu.css
+++ b/ui/package-explorer.reel/contextual-menu.reel/contextual-menu.css
@@ -28,7 +28,7 @@
     -webkit-appearance: none;
     text-align: left;
     height: auto;
-    min-height: 20px;
+    min-height: 23px;
     line-height: 20px;
     min-width: 0;
     width: 100%;
